--- a/src/StackOverflowClone/Views/Post/Index.cshtml
+++ b/src/StackOverflowClone/Views/Post/Index.cshtml
@@ -3,4 +3,23 @@
     ViewData["Title"] = "All Posts";
 }
 
-<h2>Posts</h2>
+@model IEnumerable<BasicAuthentication.Models.Item>
+@using System.Security.Claims
+
+<h2>Current Posts by you, @User.Identity.Name</h2>
+
+@if (Model.Any())
+{
+    <ul>
+        @foreach (var listItem in Model)
+        {
+            <li>@Html.DisplayFor(modelItem => listItem.Title)</li>
+        }
+    </ul>
+}
+else
+{
+    <p>You have no added any posts!</p>
+}
+
+@Html.ActionLink("Create new", "Create")
