--- a/src/StackOverflowClone/Views/Posts/Index.cshtml
+++ b/src/StackOverflowClone/Views/Posts/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "All Posts";
 }
 
-@model IEnumerable<BasicAuthentication.Models.Item>
+@model IEnumerable<StackOverflowClone.Models.Post>
 @using System.Security.Claims
 
 <h2>Current Posts by you, @User.Identity.Name</h2>
