--- a/src/StackOverflowClone/Views/Home/Index.cshtml
+++ b/src/StackOverflowClone/Views/Home/Index.cshtml
@@ -3,4 +3,25 @@
     ViewData["Title"] = "Home";
 }
 
+@model IEnumerable<StackOverflowClone.Models.Post>
+
+@if (User.Identity.IsAuthenticated)
+{
+    <p>Hello @User.Identity.Name!</p>
+    @using (Html.BeginForm("LogOff", "Account"))
+    {
+        <input type="submit" class="btn btn-default" value="Log out" />
+    }
+}
+else
+{
+    <p>@Html.ActionLink("Register", "Register", "Account")</p>
+    <p>@Html.ActionLink("Log in", "Login", "Account")</p>
+}
+
 <h2>Home Page</h2>
+
+@foreach (var post in Model)
+{
+    @Html.ActionLink(post.Title, "Details", "Home", new { id = post.PostId })
+}
