--- a/src/StackOverflowClone/Views/Posts/Index.cshtml
+++ b/src/StackOverflowClone/Views/Posts/Index.cshtml
@@ -13,7 +13,7 @@
     <ul>
         @foreach (var listItem in Model)
         {
-            <li>@Html.DisplayFor(modelItem => listItem.Title)</li>
+            <li>@Html.ActionLink(listItem.Title, "Details", "Home", new { id = listItem.PostId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.PostId }) | @Html.ActionLink("Delete", "Delete", new { id = listItem.PostId })</li>
         }
     </ul>
 }
