Add upvote without limit

--- a/src/StackOverflowClone/Views/Home/Details.cshtml
+++ b/src/StackOverflowClone/Views/Home/Details.cshtml
@@ -7,8 +7,11 @@
 
 
 <h1>@Model.Title</h1>
+<h2>Rating: @Model.Rating</h2>
 <h2>@Model.Author | @Model.Date</h2>
 <p>@Model.Body</p>
+@Html.ActionLink("UpVote", "Upvote", "Posts", new { id = Model.PostId })
+@Html.ActionLink("DownVote", "DownVote", "Posts", new { id = Model.PostId })
 
 @foreach(var comment in Model.Comments)
 {
